--- a/index.html
+++ b/index.html
@@ -2628,7 +2628,7 @@ content = `
             <div class="payment-main-info">
                 <div class="info-row">
                     <span>Комиссия</span>
-                    <span class="accent-green">+10%</span>
+                    <span class="accent-green">0%</span>
                 </div>
                 <div class="info-row">
                     <span>Макс. сумма товаров</span>
