--- a/index.html
+++ b/index.html
@@ -2083,7 +2083,7 @@ text += `🆔 ID: ${user?.id}`;
     <div class="card-feature">Отправка по РФ</div>
 </div>
 
-        <div class="delivery-card" onclick="openDelivery('yandex_delivery')">
+        <div class="delivery-card" onclick="openDelivery('yandex_courier')">
     <div class="card-badge">Быстро</div>
 
     <div class="card-title">🟡 Яндекс.Доставка</div>
@@ -2093,7 +2093,7 @@ text += `🆔 ID: ${user?.id}`;
     <div class="card-feature">Быстрая отправка</div>
 </div>
         
-        <div class="delivery-card" onclick="openDelivery('5post')">
+        <div class="delivery-card" onclick="openDelivery('fivepost')">
     <div class="card-badge">Рекомендуем</div>
 
     <div class="card-title">📦 5Post</div>
@@ -2441,7 +2441,7 @@ content = `
 
         <div class="delivery-bottom">
   <div class="delivery-bottom-label">Рекомендуем</div>
-  <div class="delivery-bottom-title">5Post</div>
+  <div class="delivery-bottom-title">5post</div>
 </div>
 
     </div>
