--- a/index.html
+++ b/index.html
@@ -1549,7 +1549,11 @@ let currentCategory = null;
   const categoryImages = {
   "Жидкости": "icons/икжиж.png",
   "POD-системы": "icons/под.png",
-  "Съедобные товары": "icons/еда.png"
+  "Съедобные товары": "icons/еда.png",
+
+  "Расслабляющий чай/кратом": "icons/tea.png",
+  "Съедобные грибы": "icons/mushrooms.png"
+    "Семена Canabis": "icons/rose_seeds.png",
 };
 
   const products = {
@@ -1651,7 +1655,15 @@ let currentCategory = null;
       image: "food/thc_cherry.png",
       description: "Сладкая вишнёвая нотка с ярким ароматом."
     }
+    "Расслабляющий чай": [
+],
+
+"Съедобные грибы": [
+],
+
+"Семена Canabis": [
 ]
+
 };
 
 function updateCartBar() {
