--- a/index.html
+++ b/index.html
@@ -1550,10 +1550,9 @@ let currentCategory = null;
   "Жидкости": "icons/икжиж.png",
   "POD-системы": "icons/под.png",
   "Съедобные товары": "icons/еда.png",
-
-  "Расслабляющий чай/кратом": "icons/tea.png",
-  "Съедобные грибы": "icons/mushrooms.png"
-  "Семена Canabis": "icons/rose_seeds.png",
+  "Чай кратом": "icons/tea.png",
+  "Съедобные грибы": "icons/mushrooms.png",
+  "Семена конопли": "icons/rose_seeds.png"
 };
 
   const products = {
@@ -1655,13 +1654,15 @@ let currentCategory = null;
       image: "food/thc_cherry.png",
       description: "Сладкая вишнёвая нотка с ярким ароматом."
     }
-    "Расслабляющий чай": [
+    ],
+    
+    "Чай кратом": [
 ],
 
 "Съедобные грибы": [
 ],
 
-"Семена Canabis": [
+"Семена конопли": [
 ]
 
 };
