--- a/index.html
+++ b/index.html
@@ -1656,7 +1656,21 @@ let currentCategory = null;
     }
     ],
     
-    "Чай кратом": [
+    "Расслабляющий чай": [
+    {
+        name: "Расслабляющий травяной сбор",
+        price: 900,
+        image: "tea/relax_tea.png",
+        description: `
+        Натуральный травяной сбор, созданный из тщательно отобранных растений,
+        собранных вручную.
+
+        Обладает мягким ароматом, насыщенным вкусом и помогает расслабиться
+        после напряжённого дня.
+
+        Идеально подходит для вечернего чаепития.
+        `
+    }
 ],
 
 "Съедобные грибы": [
