--- a/index.html
+++ b/index.html
@@ -700,9 +700,18 @@ button {
     opacity: 0.8;
 }
   .product-desc {
-    opacity: 0.8;
-    margin: 12px 0 18px 0;
-    line-height: 1.5;
+    background: rgba(255,255,255,0.04);
+    border: 1px solid rgba(255,255,255,0.06);
+    padding: 18px;
+    border-radius: 16px;
+
+    margin: 18px 0 25px 0;
+
+    line-height: 1.7;
+    font-size: 14px;
+    color: #ddd;
+
+    box-shadow: 0 10px 30px rgba(0,0,0,0.4);
 }
   .product-details {
     padding-bottom: 140px;
