--- a/index.html
+++ b/index.html
@@ -1819,7 +1819,9 @@ function openProduct(category, productName) {
         <img src="${product.image}">
     </div>
 
-    <h2>${product.name}</h2>
+    <h2 style="margin-bottom:10px; font-size:22px; font-weight:600;">
+    ${product.name}
+</h2>
 
         <p class="product-desc">
             ${product.description}
