--- a/index.html
+++ b/index.html
@@ -1667,18 +1667,30 @@ let currentCategory = null;
     
     "Расслабляющий чай": [
     {
-        name: "Расслабляющий травяной сбор",
+        name: "Кратом",
         price: 900,
         image: "tea/relax_tea.png",
         description: `
-        Натуральный травяной сбор, созданный из тщательно отобранных растений,
-        собранных вручную.
+🌿 <strong>Kratom Tea — натуральная энергия и расслабление</strong>
 
-        Обладает мягким ароматом, насыщенным вкусом и помогает расслабиться
-        после напряжённого дня.
+Kratom Tea — это насыщенный травяной напиток с глубоким зелёным оттенком и характерным природным вкусом. 
+Его выбирают за мягкий баланс между тонусом и расслаблением, что делает его универсальным вариантом как для спокойного вечера, так и для сосредоточенной работы.
 
-        Идеально подходит для вечернего чаепития.
-        `
+Порошок тонкого помола легко заваривается, раскрывая плотный травяной аромат с лёгкими земляными нотами. 
+Напиток получается густым, насыщенным и согревающим.
+
+✨ <strong>Особенности:</strong>
+
+• Натуральное растительное сырьё  
+• Мелкий помол для удобного приготовления  
+• Глубокий, выразительный вкус  
+• Подходит для заваривания как в чистом виде, так и в сочетании с мёдом или лимоном  
+
+☕ <strong>Рекомендации по приготовлению:</strong>
+
+Добавьте небольшое количество порошка в тёплую воду (не доводя до кипения), тщательно перемешайте и дайте настояться 5–10 минут.  
+При желании можно процедить.
+`
     }
 ],
 
@@ -1823,9 +1835,9 @@ function openProduct(category, productName) {
     ${product.name}
 </h2>
 
-        <p class="product-desc">
-            ${product.description}
-        </p>
+        <div class="product-desc">
+    ${product.description}
+</div>
 
         <div class="price-box">
     ${product.price} <span>₽</span>
