--- a/index.html
+++ b/index.html
@@ -1728,6 +1728,47 @@ Kratom Tea — это насыщенный травяной напиток с г
 ],
 
 "Съедобные грибы": [
+
+    {
+        name: "NIAGARA",
+        price: 1500,
+        images: [
+            "mushrooms/mushroom_1_1.jpg",
+            "mushrooms/mushroom_1_2.jpg"
+        ],
+        description: `
+Натуральные белые грибы, собранные вручную.
+Отличаются насыщенным ароматом и плотной текстурой.
+Подходят для супов, жарки и сушки.
+        `
+    },
+
+    {
+        name: "HYBRID ALBINO A+",
+        price: 1300,
+        images: [
+            "mushrooms/mushroom_2_1.jpg",
+            "mushrooms/mushroom_2_2.jpg"
+        ],
+        description: `
+Свежие подберёзовики с мягким вкусом.
+Идеальны для тушения и приготовления соусов.
+        `
+    },
+
+    {
+        name: "McKENNAII #2",
+        price: 1200,
+        images: [
+            "mushrooms/mushroom_3_1.jpg",
+            "mushrooms/mushroom_3_2.jpg"
+        ],
+        description: `
+Яркие лисички с выразительным ароматом.
+Отлично подходят для жарки и маринования.
+        `
+    }
+
 ],
 
 "Семена конопли": [
