--- a/index.html
+++ b/index.html
@@ -1823,7 +1823,7 @@ function renderCategoryContent(category){
             style="animation-delay: ${index * 0.05}s"
             onclick="openProduct('${category}', '${item.name.replace(/'/g, "\\'")}')">
 
-            <img src="${item.image}">
+            <img src="${item.images ? item.images[0] : item.image}">
 
 <div class="category-content">
     <div class="category-title">
@@ -1902,7 +1902,7 @@ function openProduct(category, productName) {
     <div class="product-details">
         
     <div class="product-image-box">
-        <img src="${product.image}">
+        <img src="${product.images ? product.images[0] : product.image}">
     </div>
 
    <h2 style="margin-bottom:8px; font-size:22px; font-weight:600;">
