--- a/index.html
+++ b/index.html
@@ -1592,7 +1592,7 @@ let currentCategory = null;
   "Жидкости": "icons/икжиж.png",
   "POD-системы": "icons/под.png",
   "Съедобные товары": "icons/еда.png",
-  "Чай кратом": "icons/tea.png",
+  "Расслабляющий чай": "icons/tea.png",
   "Съедобные грибы": "icons/mushrooms.png",
   "Семена конопли": "icons/rose_seeds.png"
 };
