--- a/index.html
+++ b/index.html
@@ -1572,6 +1572,28 @@ button {
     );
     border: 1px solid rgba(255,255,255,0.08);
 }
+  .image-slider {
+    display: flex;
+    overflow-x: auto;
+    scroll-snap-type: x mandatory;
+    gap: 10px;
+    border-radius: 18px;
+}
+
+.image-slider::-webkit-scrollbar {
+    display: none;
+}
+
+.slide {
+    flex: 0 0 100%;
+    scroll-snap-align: center;
+}
+
+.slide img {
+    width: 100%;
+    border-radius: 18px;
+    object-fit: cover;
+}
 
 </style>
 </head>
@@ -1915,8 +1937,20 @@ function openProduct(category, productName) {
     <div class="product-details">
         
     <div class="product-image-box">
-        <img src="${product.images ? product.images[0] : product.image}">
-    </div>
+    ${
+        product.images
+        ? `
+        <div class="image-slider">
+            ${product.images.map(img => `
+                <div class="slide">
+                    <img src="${img}">
+                </div>
+            `).join("")}
+        </div>
+        `
+        : `<img src="${product.image}">`
+    }
+</div>
 
    <h2 style="margin-bottom:8px; font-size:22px; font-weight:600;">
     ${product.name}
