--- a/index.html
+++ b/index.html
@@ -1824,8 +1824,13 @@ Kratom Tea — это насыщенный травяной напиток с г
             "mushrooms/mushroom_3_2.jpg"
         ],
         description: `
-Яркие лисички с выразительным ароматом.
-Отлично подходят для жарки и маринования.
+Контроль над вниманием, совершенно отчетливые метаморфозы сплетающихся узоров и неспешность сменивающихся видений характеризуют эффект от употребления отвара Mckennaii.
+ 
+В путешествии странник почувствует себя древнегреческим философом, с одним лишь отличием.
+Он не встретит на пути неразрешимых парадоксов и загадочных тупиков. 
+Восходящий к неистовому свету поток вознесет сознание над непроходимой в бодрствовании замкнутой цепи дуальных понятий, догм, навязанных идей и стереотипов. 
+Путешественнику станут доступны все знания и истины, которые он сможет пережить на личном опыте. 
+Для знакомства будет достаточно 2-2.5 грамм, для полноценного путешествия нужно 4-5 грамм. Гриб мощный, начинающим нужно быть аккуратнее. 
         `
     }
 
