--- a/index.html
+++ b/index.html
@@ -1797,9 +1797,19 @@ Kratom Tea — это насыщенный травяной напиток с г
             "mushrooms/mushroom_1_2.jpg"
         ],
         description: `
-Натуральные белые грибы, собранные вручную.
-Отличаются насыщенным ароматом и плотной текстурой.
-Подходят для супов, жарки и сушки.
+Гипнотические красочные узоры и образы начнут возникать перед «путешественником»
+на 25-40 минуте после употребления. 
+При достаточном самообладании Niagara позволит заглянуть вглубь себя и выбросить оттуда хлам: скопившийся негатив, страхи, сомнения и неуверенность.
+Набрав полную силу, отвар вызовет мистический экстаз, и сделает общение со Вселенной легким и понятным.
+На любой заданный вопрос будет дан ответ, нужно только слушать.
+
+Грибной трип будет длиться 4 часа.
+Время может показаться «вечностью» или пролететь как одна минута.
+Употреблять отвар следует в хорошем расположении духа, с чистым разумом и намерениями.
+
+Познакомиться со стрейном можно при дозировке в 1,5-2 г. сухих грибов.
+Более опытные «туристы» могут смело употреблять 3-4 г.
+ Для полного погружения и растворения в «грибах» рекомендуется использовать 4,5-6 г. продукта.
         `
     },
 
@@ -1811,8 +1821,26 @@ Kratom Tea — это насыщенный травяной напиток с г
             "mushrooms/mushroom_2_2.jpg"
         ],
         description: `
-Свежие подберёзовики с мягким вкусом.
-Идеальны для тушения и приготовления соусов.
+Грибы мощные,будьте аккуратны.
+
+После приема отвара измененное состояние сознания довольно неустойчивое. Без предварительной подготовки психонавта 
+может немного покидать из прошлого в будущее и наоборот. 
+
+Сохранив непредвзятость, объективность и хладнокровие к всплывающим образам, практик сможет взлететь на потоке
+эйфорического жара к неописуемому источнику света.
+Если получится удержать такое состояние, не отвлекаясь на уловки хитрого ума, то странника
+ждут высокодуховные откровения и ответы на все интересующие вопросы.
+Оптимальной дозировкой для приготовления отвара считается порция в 2,5-3 грамма сухих плодовых тел.
+
+Спустя 15-30 минут после приема «Гибрида Альбино "А+"
+наблюдается резкое обострение чувствительности, цвета и звуки начинают приобретать множественные оттенки,
+дискомфортное ощущение тошноты сменяется приятными волнами огненного жара, неспешно разливающегося по всем клеточкам
+тела и дарующего освобождение от дуального восприятия действительности. 
+Ментальные и физические зажимы расползутся, высвобождая замкнутую энергию внимания и творчества.
+Волшебные проводники на несколько часов погружают психонавта в водоворот красок.
+
+Перед сессией рекомендуется около трех дней воздерживаться от приема алкоголя и наркотических веществ, а также пищи животного происхождения.
+Такая подготовка тела позволит испытать красочный трип, сохранив спокойствие и невозмутимость, сведя возможность Бэд-трипа к минимуму.
         `
     },
 
