--- a/index.html
+++ b/index.html
@@ -1864,10 +1864,50 @@ Kratom Tea — это насыщенный травяной напиток с г
 
 ],
 
-"Семена конопли": [
-]
+"Семена конопли": {
+    "Автоцветущие": [
+        {
+            name: "Orange Creampop Auto",
+            price: 2500,
+            images: [
+                "rose_seeds/auto_1.jpg",
+                "rose_seeds/auto_2.jpg",
+                "rose_seeds/auto_3.jpg"
+            ],
+            description: `
+<strong>Orange Creampop Auto</strong>
 
-};
+Коллекционная генетическая линия с ярким цитрусовым профилем.
+
+🧬 Тип: Автоцветущий  
+📦 Упаковка: 3 семени  
+
+Предназначено для коллекционных целей.
+`
+        }
+    ],
+
+    "Фотопериодные": [
+        {
+            name: "Orange Creampop FEM",
+            price: 2700,
+            images: [
+                "rose_seeds/fem_1.jpg",
+                "rose_seeds/fem_2.jpg",
+                "rose_seeds/fem_3.jpg"
+            ],
+            description: `
+<strong>Orange Creampop FEM</strong>
+
+Феминизированная генетическая линия с высокой стабильностью.
+
+🧬 Тип: Фотопериодный  
+📦 Упаковка: 3 семени  
+
+Предназначено для коллекционных целей.
+`
+        }
+    ]
 
 function updateCartBar() {
 
