--- a/index.html
+++ b/index.html
@@ -1906,9 +1906,9 @@ Kratom Tea — это насыщенный травяной напиток с г
 
 Предназначено для коллекционных целей.
 `
-  ]
+        }   // ← закрываем товар
+    ]       // ← закрываем массив "Фотопериодные"
 }
-    
 };
   
 function updateCartBar() {
