--- a/index.html
+++ b/index.html
@@ -1654,6 +1654,15 @@ button {
 .badge-fem {
     background: linear-gradient(135deg, #9b59b6, #8e44ad);
 }
+  .badge.auto {
+    background: linear-gradient(135deg, #1db954, #16a34a);
+    color: white;
+}
+
+.badge.fem {
+    background: linear-gradient(135deg, #3b82f6, #2563eb);
+    color: white;
+}
 
 </style>
 </head>
