--- a/index.html
+++ b/index.html
@@ -2103,7 +2103,7 @@ main.innerHTML = `<div class="screen ${themeClass}">${html}</div>`;
   main.classList.remove("fade-out");
 }
   
-function openProduct(category, subCategory, productName)
+function openProduct(category, subCategory, productName) {
 
     let product;
 
