--- a/index.html
+++ b/index.html
@@ -1914,9 +1914,9 @@ Kratom Tea — это насыщенный травяной напиток с г
             name: "Orange Creampop Auto",
             price: 2500,
             images: [
-                "rose_seeds/auto_1.jpg",
-                "rose_seeds/auto_2.jpg",
-                "rose_seeds/auto_3.jpg"
+                "/rose_seeds/auto/auto_1_1.jpg",
+                "/rose_seeds/auto/auto_1_2.jpg",
+                "/rose_seeds/auto/auto_1_3.jpg"
             ],
             description: `
 <strong>Orange Creampop Auto</strong>
@@ -1936,9 +1936,9 @@ Kratom Tea — это насыщенный травяной напиток с г
             name: "Orange Creampop FEM",
             price: 2700,
             images: [
-                "rose_seeds/fem_1.jpg",
-                "rose_seeds/fem_2.jpg",
-                "rose_seeds/fem_3.jpg"
+                "/rose_seeds/photo/photo_1_1.jpg",
+                "/rose_seeds/photo/photo_1_2.jpg",
+                "/rose_seeds/photo/photo_1_3.jpg"
             ],
             description: `
 <strong>Orange Creampop FEM</strong>
